--- a/PromptrAddIn/PromptrLib/PromptrLib.csproj
+++ b/PromptrAddIn/PromptrLib/PromptrLib.csproj
@@ -1,4 +1,4 @@
-<?xml version="1.0" encoding="utf-8"?>
+﻿<?xml version="1.0" encoding="utf-8"?>
 <Project ToolsVersion="14.0" DefaultTargets="Build" xmlns="http://schemas.microsoft.com/developer/msbuild/2003">
   <Import Project="$(MSBuildExtensionsPath)\$(MSBuildToolsVersion)\Microsoft.Common.props" Condition="Exists('$(MSBuildExtensionsPath)\$(MSBuildToolsVersion)\Microsoft.Common.props')" />
   <PropertyGroup>
@@ -63,8 +63,8 @@
   <ItemGroup>
     <Compile Include="Connector\Connection.cs" />
     <Compile Include="Connector\ConnectionFactory.cs" />
-    <Compile Include="Logic\IPromptrClient.cs" />
-    <Compile Include="Connector\PromptrClient.cs" />
+    <Compile Include="Logic\IConnectorClient.cs" />
+    <Compile Include="Connector\ConnectorClient.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
   <ItemGroup>
