--- a/PromptrAddIn/PromptrLib/PromptrLib.csproj
+++ b/PromptrAddIn/PromptrLib/PromptrLib.csproj
@@ -44,6 +44,7 @@
     </Reference>
     <Reference Include="System" />
     <Reference Include="System.Core" />
+    <Reference Include="System.Drawing" />
     <Reference Include="System.Net.Http.Extensions, Version=2.2.29.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a, processorArchitecture=MSIL">
       <HintPath>..\packages\Microsoft.Net.Http.2.2.29\lib\net45\System.Net.Http.Extensions.dll</HintPath>
       <Private>True</Private>
@@ -61,6 +62,7 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="Connector\ColorCalculation.cs" />
     <Compile Include="Connector\Connection.cs" />
     <Compile Include="Connector\ConnectionFactory.cs" />
     <Compile Include="Logic\IConnectorClient.cs" />
