--- a/PromptrAddIn/PromptrLib/PromptrLib.csproj
+++ b/PromptrAddIn/PromptrLib/PromptrLib.csproj
@@ -65,6 +65,8 @@
     <Compile Include="Connector\ConnectionFactory.cs" />
     <Compile Include="Logic\IConnectorClient.cs" />
     <Compile Include="Connector\ConnectorClient.cs" />
+    <Compile Include="Logic\IPromptrClient.cs" />
+    <Compile Include="Logic\PromptrClient.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
   <ItemGroup>
