--- a/Promptr/PromptrLib/PromptrLib.csproj
+++ b/Promptr/PromptrLib/PromptrLib.csproj
@@ -66,7 +66,7 @@
     <Compile Include="Connector\Connection.cs" />
     <Compile Include="Connector\ConnectionFactory.cs" />
     <Compile Include="Constants.cs" />
-    <Compile Include="Logic\IConnectorClient.cs" />
+    <Compile Include="Connector\IConnectorClient.cs" />
     <Compile Include="Connector\ConnectorClient.cs" />
     <Compile Include="Logic\IPromptrClient.cs" />
     <Compile Include="Logic\PromptrClient.cs" />
