--- a/Promptr/TempoMeasurer/packages.config
+++ b/Promptr/TempoMeasurer/packages.config
@@ -1,4 +1,9 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
 <packages>
+  <package id="Microsoft.Bcl" version="1.1.10" targetFramework="monoandroid60" />
+  <package id="Microsoft.Bcl.Build" version="1.0.21" targetFramework="monoandroid60" />
+  <package id="Microsoft.Net.Http" version="2.2.29" targetFramework="monoandroid60" />
+  <package id="Newtonsoft.Json" version="7.0.1" targetFramework="monoandroid60" />
+  <package id="Q42.HueApi" version="2.2.8" targetFramework="monoandroid60" />
   <package id="Xamarin.Android.Support.v4" version="23.3.0" targetFramework="monoandroid60" />
 </packages>
